Removed unnecessary posting of ID
API now makes use of JWT to get the user ID, which minimizes the amount of IDs needed to send
